tests/spec/emit/snapshots/interop_result_try_block.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn make() -> Result<fn(string) -> Result<int, error>, error> {
    try {
      let _ = Ok(1)?
      strconv.Atoi
    }
  }
  
  fn main() {
    let r = make()
    match r {
      Ok(f) => {
        let r2 = f("1")
        match r2 {
          Ok(v) => { let _ = v },
          Err(_) => { let _ = 0 },
        }
      },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func make_() (func(string) (int, error), error) {
	check := lisette.MakeResultOk[int, error](1)
	if check.Tag != lisette.ResultOk {
		return nil, check.ErrVal
	}
	return strconv.Atoi, nil
}

func main() {
	r, err := make_()
	if err == nil {
		r2, err_1 := r("1")
		if err_1 == nil {
			_ = r2
		}
	}
}
