tests/spec/emit/snapshots/interop_result_tuple_element.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let t: (fn(string) -> Result<int, error>, int) = (strconv.Atoi, 1)
    let r = t.0("1")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func main() {
	t := lisette.MakeTuple2[func(string) (int, error), int](strconv.Atoi, 1)
	r, err := t.First("1")
	if err == nil {
		_ = r
	}
}
