tests/spec/emit/snapshots/interop_result_tuple_struct_constructor.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  type F = fn(string) -> Result<int, error>
  struct Pair(F, int)
  
  fn main() {
    let p = Pair(strconv.Atoi, 1)
    let r = p.0("1")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

type F func(string) (int, error)

type Pair struct {
	F0 F
	F1 int
}

func main() {
	p := Pair{
		F0: strconv.Atoi,
		F1: 1,
	}
	r, err := p.F0("1")
	if err == nil {
		_ = r
	}
}
