tests/spec/emit/snapshots/interop_result_ufcs_call_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  struct Box {}
  
  impl Box {
    fn apply(self, f: fn(string) -> Result<int, error>) -> Result<int, error> {
      f("1")
    }
  }
  
  fn main() {
    let b = Box {}
    let r = Box.apply(b, strconv.Atoi)
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

type Box struct{}

func (b Box) apply(f func(string) (int, error)) (int, error) {
	return f("1")
}

func main() {
	b := Box{}
	r, err := b.apply(strconv.Atoi)
	if err == nil {
		_ = r
	}
}
