tests/spec/emit/snapshots/interop_sentinel_call_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/idx"
  
  fn apply(f: fn(string, string) -> Option<int>, s: string) -> int {
    match f(s, "ll") {
      Some(v) => v,
      None => -2,
    }
  }
  
  fn main() {
    let r = apply(idx.Find, "hello")
    let _ = r
  }
---
package main

import "example.com/idx"

func apply(f func(string, string) (int, bool), s string) int {
	if v, ok := f(s, "ll"); ok {
		return v
	} else {
		return -2
	}
}

func main() {
	r := apply(func(arg0 string, arg1 string) (int, bool) {
		ret := idx.Find(arg0, arg1)
		return ret, ret != -1
	}, "hello")
	_ = r
}
