tests/spec/emit/snapshots/interop_sentinel_call_tests_the_sentinel_in_place.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/idx"
  
  fn if_let(s: string) -> int {
    if let Some(i) = idx.Find(s, "=") {
      return i
    }
    -1
  }
  
  fn let_else(s: string) -> int {
    let Some(i) = idx.Find(s, ":") else { return 0 }
    i + 1
  }
  
  fn propagate(s: string) -> Option<int> {
    let i = idx.Find(s, "/")?
    Some(i * 2)
  }
  
  fn defaulted(s: string) -> int {
    idx.Find(s, "x").unwrap_or(0)
  }
  
  fn found(s: string) -> bool {
    idx.Find(s, "b").is_some()
  }
---
package main

import "example.com/idx"

func ifLet(s string) int {
	if i := idx.Find(s, "="); i != -1 {
		return i
	}
	return -1
}

func letElse(s string) int {
	i := idx.Find(s, ":")
	if i == -1 {
		return 0
	}
	return i + 1
}

func propagate(s string) (int, bool) {
	i := idx.Find(s, "/")
	if i == -1 {
		return 0, false
	}
	return i * 2, true
}

func defaulted(s string) int {
	ret := idx.Find(s, "x")
	if ret == -1 {
		ret = 0
	}
	return ret
}

func found(s string) bool {
	ret := idx.Find(s, "b")
	return ret != -1
}
