tests/spec/emit/snapshots/interop_sentinel_let_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/idx"
  
  fn main() {
    let f = idx.Find
    let r = f("hello", "ll")
    match r {
      Some(v) => { let _ = v },
      None => { let _ = -2 },
    }
  }
---
package main

import "example.com/idx"

func main() {
	f := func(arg0, arg1 string) (int, bool) {
		ret := idx.Find(arg0, arg1)
		return ret, ret != -1
	}
	r, ok := f("hello", "ll")
	if ok {
		_ = r
	} else {
		_ = -2
	}
}
