tests/spec/emit/snapshots/interop_sentinel_return_pos.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/idx"
  
  fn make_finder() -> fn(string, string) -> Option<int> {
    idx.Find
  }
  
  fn main() {
    let f = make_finder()
    let r = f("hello", "ll")
    match r {
      Some(v) => { let _ = v },
      None => { let _ = -2 },
    }
  }
---
package main

import "example.com/idx"

func makeFinder() func(string, string) (int, bool) {
	return func(arg0, arg1 string) (int, bool) {
		ret := idx.Find(arg0, arg1)
		return ret, ret != -1
	}
}

func main() {
	f := makeFinder()
	r, ok := f("hello", "ll")
	if ok {
		_ = r
	} else {
		_ = -2
	}
}
