tests/spec/emit/snapshots/interop_slice_alias_value_unwrapped_at_go_struct_literal.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/x509"
  import "go:net/url"
  
  type URLs = Slice<Option<Ref<url.URL>>>
  
  fn main() {
    let u = url.URL {
      Scheme: "https",
      Host: "example.com",
      ..,
    }
    let urls: URLs = [Some(&u), None]
    let cert = x509.Certificate {
      URIs: urls,
      PublicKey: 0,
      ..,
    }
    let _ = cert
  }
---
package main

import (
	"crypto/x509"
	lisette "github.com/ivov/lisette/prelude"
	"net/url"
)

type URLs = []lisette.Option[*url.URL]

func main() {
	u := url.URL{
		Scheme: "https",
		Host:   "example.com",
	}
	urls := []lisette.Option[*url.URL]{
		lisette.MakeOptionSome(&u),
		lisette.MakeOptionNone[*url.URL](),
	}
	unwrapped := make([]*url.URL, len(urls))
	for i, v := range urls {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = v.SomeVal
		}
	}
	cert := x509.Certificate{
		URIs:      unwrapped,
		PublicKey: 0,
	}
	_ = cert
}
