tests/spec/emit/snapshots/interop_slice_literal_option_import.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  fn empty() -> Slice<Option<int>> {
    let xs: Slice<Option<int>> = []
    xs
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func empty() []lisette.Option[int] {
	xs := []lisette.Option[int]{}
	return xs
}
