tests/spec/emit/snapshots/interop_slice_map_keeps_result_callback_tagged.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/ext"
  
  fn convert_all(xs: Slice<int>) {
    let _ = xs.map(ext.Parse)
  }
---
package main

import (
	"example.com/ext"
	lisette "github.com/ivov/lisette/prelude"
)

func convertAll(xs []int) {
	lisette.SliceMap(xs, func(arg0 int) lisette.Result[string, error] {
		return lisette.ResultFromPair[string](ext.Parse(arg0))
	})
}
